remove yolo ref

--- a/templates/index.html
+++ b/templates/index.html
@@ -1592,7 +1592,7 @@
                             </div>
                             <div class="flex justify-between">
                                 <span class="text-gray-500">Model</span>
-                                <span class="text-gray-700 font-mono">YOLOv8n</span>
+                                <span class="text-gray-700 font-mono">EfficientDet-Lite0</span>
                             </div>
                         </div>
                     </div>
