Cleaned file and reorganized them to prepare for opensourcing

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4373,7 +4373,7 @@
 
                 const data = await response.json();
                 if (data.success) {
-                    addLog('SUCCESS', 'Test notification sent - check your desktop!');
+                    addLog('SUCCESS', 'Test notification sent - check your Discord!');
                 } else {
                     addLog('WARNING', 'Failed to send notification');
                 }
